# wordcount

./: .gitignore  Cargo.toml  README.md  corpus.txt
src/: main.rs
wordcount/: Cargo.toml
wordcount-core/: Cargo.toml
wordcount-core/src/: args.rs  config.rs  lib.rs
wordcount-core/tests/: integration_test.rs
wordcount-core/tests/common/: mod.rs
wordcount-core/tests/mock/: reader.rs
wordcount/src/: main.rs
