[package]
name = "wordcount"
version = "0.1.0"
authors = ["ewohltman"]
edition = "2018"
description = "A Rust implementation of `wc` for learning"
readme = "README.md"
repository = "https://github.com/ewohltman/wordcount"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wordcount-core = { path = "../wordcount-core" }